--- a/src/components/HappyHouse/HappyHouse.scss
+++ b/src/components/HappyHouse/HappyHouse.scss
@@ -1,79 +1,94 @@
-// .HappyHouse-container {
-//   height: 80vh;
-//   width: 100%;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-//   object-fit: contain;
-//   background-image: url();
-//   background-size: cover;
-// }
+.HappyHouse-container {
+  position: relative;
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
+  z-index: 1;
+}
+.HappyHouse-container:before {
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../images/fondo.jpg);
+  opacity: .6;
+  background-size: cover;
+  z-index: -1;
+}
+.HappyHouse-container > h2 {
+  color: rgb(230, 85, 13);
+  font-size: 60px;
+  margin-top: -100px;
+  text-align: center;
+}
 
-// .HappyHouse-container > h2 {
-//   color: #fff;
-//   font-size: 50px;
-//   margin-top: -100px;
-// }
+.HappyHouse-container > p {
+  margin-top: 8px;
+  color: rgb(73, 24, 3);
+  font-size: 40px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
 
-// .HappyHouse-container > p {
-//   margin-top: 8px;
-//   color: #fff;
-//   font-size: 32px;
-//   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-//     "Lucida Sans", Arial, sans-serif;
-// }
+.form-comtrol{
+  border-radius: 5px 30px 45px 60px !important;
+}
+.HappyHouse-btns {
+  margin-top: 32px;
+}
 
-// .HappyHouse-btns {
-//   margin-top: 32px;
-// }
+.HappyHouse-btns .btn {
+  height: 100px;
+  width: 350px;
+  margin: 6px;
+  letter-spacing: 10px;
+}
+.HappyHouse-btns .btn:hover {
+  background-color: rgba(245, 133, 42, 0.9);
+}
+.fa-play-circle {
+  margin-left: 4px;
+}
 
-// .HappyHouse-btns .btn {
-//   height: 100px;
-//   width: 350px;
-//   margin: 6px;
-//   letter-spacing: 10px;
-// }
-// .HappyHouse-btns .btn:hover {
-//   background-color: rgba(245, 133, 42, 0.9);
-// }
-// .fa-play-circle {
-//   margin-left: 4px;
-// }
+@media screen and (max-width: 960px) {
+  .HappyHouse-container > h2 {
+    text-align: center;
+    font-size: 50px;
+    margin-top: -100px;
+    box-sizing: border-box;
+    padding: 80px;
+  }
+  .HappyHouse-container > p {
+    font-size: 30px;
+    text-align: center;
+  }
+}
 
-// @media screen and (max-width: 960px) {
-//   .HappyHouse-container > h2 {
-//     text-align: center;
-//     font-size: 40px;
-//     margin-top: -100px;
-//     box-sizing: border-box;
-//     padding: 80px;
-//   }
-//   .HappyHouse-container > p {
-//     font-size: 30px;
-//     text-align: center;
-//   }
-// }
+@media screen and (max-width: 768px) {
+  .HappyHouse-container > h2 {
+    font-size: 35px;
+    margin-top: -100px;
+    text-align: center;
+  }
 
-// @media screen and (max-width: 768px) {
-//   .HappyHouse-container > h2 {
-//     font-size: 35px;
-//     margin-top: -100px;
-//     text-align: center;
-//   }
+  .HappyHouse-container > p {
+    font-size: 30px;
+    text-align: center;
+  }
 
-//   .HappyHouse-container > p {
-//     font-size: 30px;
-//     text-align: center;
-//   }
+  .btn-mobile {
+    display: block;
+    text-decoration: none;
+  }
 
-//   .btn-mobile {
-//     display: block;
-//     text-decoration: none;
-//   }
-
-//   .btn {
-//     width: 100%;
-//   }
-// }
+  .btn {
+    width: 100%;
+  }
+}
