basics styles dashboard

--- a/src/pages/DashboardProducts/DashboardProducts.scss
+++ b/src/pages/DashboardProducts/DashboardProducts.scss
@@ -1,1 +1,9 @@
-.DashboardProducts {}
+.dashboardBody {
+    margin: 0 10%;
+
+    .titles{
+        p{
+            color: grey;
+        }
+    }
+}
