--- a/src/components/HouseItem/HouseItem.scss
+++ b/src/components/HouseItem/HouseItem.scss
@@ -1,5 +1,12 @@
 .HouseItem {
     img{
-        width: 100%;
+        width: 80%;
+        border-radius: 10px;
+    }
+    p{
+        margin: 0;
+    }
+    .bold{
+        font-weight: bold;
     }
 }
