--- a/src/components/HappyHouse/HappyHouse.scss
+++ b/src/components/HappyHouse/HappyHouse.scss
@@ -1,6 +1,6 @@
 .HappyHouse-container {
   position: relative;
-  height: 80vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,6 @@
 .HappyHouse-container > h2 {
   color: rgb(230, 85, 13);
   font-size: 60px;
-  margin-top: -100px;
   text-align: center;
 }
 
@@ -55,6 +54,9 @@
 }
 .fa-play-circle {
   margin-left: 4px;
+}
+.carousel-container {
+  width: 100%;
 }
 
 @media screen and (max-width: 960px) {
